<resources>
    <string name="app_name">Shopping App</string>
    <string name="Error_txt">Error</string>
    <string name="Ok_txt">OK</string>
    <string name="Login_btn">Login</string>
    <string name="Sign_up_txt">Create an Account Sign Up</string>
    <string name="Login_failed_txt">Login Failed</string>
    <string name="Sign_up_failed_txt">Sign up Failed</string>
    <string name="Login_des_txt">Login an account</string>
    <string name="Email_txt">User Email</string>
...
    <string name="Cart_txt">Cart</string>
    <!--<string name="Favorite_txt">Favorite</string>-->
    <string name="Orders_txt">Orders</string>
    <string name="Profile_txt">Profile</string>
    <string name="logout_btn">Logout</string>
    <string name="support_txt">Support</string>
    <string name="email_validation_txt">Email cannot be empty</string>
    <string name="Invalid_email_txt">Invalid email format</string>
    <string name="Reset_pass_txt">Reset password</string>
    <string name="Enter_email_txt">Enter your email</string>
    <string name="Reset_txt">We will send you a message to set or reset your new password.</string>
    <string name="Reset_msg_txt">We’ve sent you an email with the instructions to reset your password.Please follow the link in the email.</string>
    <string name="Reset_fail_msg_txt">Failed to send password reset email</string>
    <string name="back_to_login_txt">Back to Login</string>
    <string name="Logged_out_txt">Logged out</string>
    <string name="Log_out_msg_txt">Logged out successfully</string>
    <string name="Banner_txt">Banner</string>
    <string name="Back_txt">Back</string>
    <string name="cart_empty_txt">Your cart is empty</string>
    <string name="Place_order_btn">Ready to Place Your Order?</string>
...
    <string name="invalid_dates">Invalid Date</string>
    <string name="order_history">Order History</string>
    <string name="order_txt">Are you sure you want to place the order?</string>
    <string name="order_msg">You are about to finalize your purchase.</string>
    <string name="confirm_order_btn">Confirm Order</string>
    <string name="add_more_btn">Add More Items</string>
    <string name="reset_dialog_title">Check Your Email!</string>
    <string name="reset_dialog_title_fail">Password Reset Failed!</string>
    <string name="update_Profile">Update Profile</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="role">Role</string>
    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="profile_update_failed">Failed to update profile</string>
...
